--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,34 @@
     font-family: 'Manrope';
     src: url('/fonts/Manrope-VariableFont_wght.ttf') format('truetype');
 }
+
+.custom-dark-orange-filter {
+    filter: none;
+}
+
+.custom-dark-orange-filter:hover {
+    filter: invert(41%) sepia(67%) saturate(403%) hue-rotate(338deg) brightness(95%) contrast(96%);
+}
+
+.custom-dark-orange-filter-v2{
+    filter: none;
+}
+
+.custom-dark-orange-filter-v2:hover{
+    filter: invert(62%) sepia(20%) saturate(1378%) hue-rotate(335deg) brightness(87%) contrast(84%);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+    /*display: none;*/
+    width: 0.3vw;
+}
+
+.example::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.example::-webkit-scrollbar-thumb {
+    background-color: #D87D4A;
+    border-radius: 10px;
+}
